--- a/First_test.ipynb
+++ b/First_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "First test",
       "provenance": [],
-      "authorship_tag": "ABX9TyP1xgkDCPxh6R3IvqnXQ/X+",
+      "authorship_tag": "ABX9TyP4xlFsiurlno9JLz23EUCR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,17 @@
         "colab_type": "text"
       },
       "source": [
-        "This a test of google colab.\n"
+        "*This* a test of google colab. This test will: \n",
+        "\n",
+        "* try to import pytorch \n",
+        "* build a very simple neural network\n",
+        "* train it on a very very simple data set\n",
+        "* compute the output on a very simple data set. \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -39,13 +49,28 @@
       "metadata": {
         "id": "ZiJSbvyd7YSm",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f5fecd87-be4f-4b8d-81d0-d0b20f70a272"
       },
       "source": [
-        "x = 1\n"
+        "x = 1\n",
+        "y = 2\n",
+        "z = 1+2\n",
+        "print(z)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
